package main

import (
	"context"
	"log"
	"time"

	videov1 "github.com/bionicotaku/kratos-template/api/video/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

const (
	// gRPC æœåŠ¡åœ°å€
	grpcAddr = "localhost:9000"
	// æµ‹è¯•ç”¨æˆ· ID
	testUserID = "f0ad5a16-0d50-4f94-8ff7-b99dda13ee47"
)

func main() {
	ctx := context.Background()

	// 1. å»ºç«‹ gRPC è¿æ¥
	conn, err := grpc.NewClient(
		grpcAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		log.Fatalf("âŒ è¿æ¥ gRPC æœåŠ¡å¤±è´¥: %v", err)
	}
	defer conn.Close()

	commandClient := videov1.NewVideoCommandServiceClient(conn)
	queryClient := videov1.NewVideoQueryServiceClient(conn)

	log.Println("âœ… å·²è¿æ¥åˆ° gRPC æœåŠ¡:", grpcAddr)
	log.Println()

	// 2. æµ‹è¯• CreateVideo
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ“ æµ‹è¯• 1: CreateVideo")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	createReq := &videov1.CreateVideoRequest{
		UploadUserId:     testUserID,
		Title:            "ç«¯åˆ°ç«¯æµ‹è¯•è§†é¢‘",
		Description:      strPtr("è¿™æ˜¯ä¸€ä¸ªå®Œæ•´çš„ç«¯åˆ°ç«¯æµ‹è¯•ï¼ŒéªŒè¯ Outbox â†’ Pub/Sub â†’ Projection æµç¨‹"),
		RawFileReference: "gs://test-bucket/videos/e2e-test-" + time.Now().Format("20060102-150405") + ".mp4",
	}

	createResp, err := commandClient.CreateVideo(ctx, createReq)
	if err != nil {
		log.Fatalf("âŒ CreateVideo å¤±è´¥: %v", err)
	}

	videoID := createResp.VideoId
	log.Printf("âœ… CreateVideo æˆåŠŸ!")
	log.Printf("   Video ID: %s", videoID)
	log.Printf("   Status: %s", createResp.Status)
	log.Printf("   Event ID: %s", createResp.EventId)
	log.Printf("   Version: %d", createResp.Version)
	log.Printf("   Created At: %s", createResp.CreatedAt)
	log.Println()

	// 3. ç­‰å¾…æŠ•å½±åŒæ­¥
	log.Println("â³ ç­‰å¾…æŠ•å½±åŒæ­¥ï¼ˆ5 ç§’ï¼‰...")
	log.Println("   æµç¨‹: videos â†’ outbox â†’ pub/sub â†’ inbox â†’ video_projection")
	time.Sleep(5 * time.Second)
	log.Println()

	// æ³¨æ„ï¼šæŠ•å½±è¡¨æŸ¥è¯¢åªè¿”å› ready/published çŠ¶æ€çš„è§†é¢‘
	// pending_upload çŠ¶æ€çš„è§†é¢‘ä¼šè¢«è¿‡æ»¤ï¼Œè¿™æ˜¯ä¸šåŠ¡è®¾è®¡
	log.Println("ğŸ’¡ æ³¨æ„: æŠ•å½±è¡¨æŸ¥è¯¢åªè¿”å› ready/published çŠ¶æ€çš„è§†é¢‘")
	log.Println("   pending_upload çŠ¶æ€ä¼šè¢«è¿‡æ»¤ï¼ˆä¸šåŠ¡è®¾è®¡ï¼‰")
	log.Println("   ç°åœ¨å…ˆ UpdateVideo æ”¹ä¸º ready çŠ¶æ€ï¼Œå†éªŒè¯æŸ¥è¯¢")
	log.Println()

	// 4. æµ‹è¯• UpdateVideoï¼ˆæ”¹ä¸º ready çŠ¶æ€ï¼‰
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ“ æµ‹è¯• 2: UpdateVideoï¼ˆæ”¹ä¸º ready çŠ¶æ€ï¼‰")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	updateReq := &videov1.UpdateVideoRequest{
		VideoId:     videoID,
		Title:       strPtr("ç«¯åˆ°ç«¯æµ‹è¯•è§†é¢‘ï¼ˆå·²æ›´æ–°ï¼‰"),
		Status:      strPtr("ready"),
		MediaStatus: strPtr("ready"),
	}

	updateResp, err := commandClient.UpdateVideo(ctx, updateReq)
	if err != nil {
		log.Fatalf("âŒ UpdateVideo å¤±è´¥: %v", err)
	}

	log.Println("âœ… UpdateVideo æˆåŠŸ!")
	log.Printf("   Video ID: %s", updateResp.VideoId)
	log.Printf("   Status: %s", updateResp.Status)
	log.Printf("   Media Status: %s", updateResp.MediaStatus)
	log.Printf("   Event ID: %s", updateResp.EventId)
	log.Printf("   Version: %d", updateResp.Version)
	log.Println()

	// 5. ç­‰å¾…æŠ•å½±åŒæ­¥
	log.Println("â³ ç­‰å¾…æŠ•å½±åŒæ­¥ï¼ˆ10 ç§’ï¼‰...")
	time.Sleep(10 * time.Second)
	log.Println()

	// 6. éªŒè¯æŠ•å½±è¡¨æŸ¥è¯¢ï¼ˆç°åœ¨çŠ¶æ€æ˜¯ readyï¼Œåº”è¯¥èƒ½æŸ¥åˆ°ï¼‰
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ” éªŒè¯æŠ•å½±è¡¨æŸ¥è¯¢ï¼ˆready çŠ¶æ€ï¼‰")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	getReq := &videov1.GetVideoDetailRequest{
		VideoId: videoID,
	}

	getResp, err := queryClient.GetVideoDetail(ctx, getReq)
	if err != nil {
		log.Printf("âŒ GetVideoDetail å¤±è´¥: %v", err)
		log.Println("   å¯èƒ½åŸå› :")
		log.Println("   1. Outbox Publisher æœªå¯åŠ¨æˆ–æœªæˆåŠŸå‘å¸ƒ")
		log.Println("   2. Projection Consumer æœªå¯åŠ¨æˆ–æœªæ¶ˆè´¹æ¶ˆæ¯")
		log.Println("   3. Pub/Sub æ¶ˆæ¯ä¼ é€’å»¶è¿Ÿ")
		return
	}

	detail := getResp.Detail
	log.Println("âœ… æŠ•å½±è¡¨æŸ¥è¯¢æˆåŠŸ!")
	log.Printf("   Video ID: %s", detail.VideoId)
	log.Printf("   Title: %s", detail.Title)
	log.Printf("   Status: %s", detail.Status)
	log.Printf("   Media Status: %s", detail.MediaStatus)
	log.Printf("   Analysis Status: %s", detail.AnalysisStatus)
	log.Printf("   Created At: %s", detail.CreatedAt)
	log.Printf("   Updated At: %s", detail.UpdatedAt)
	log.Println()

	// 7. æµ‹è¯•å†æ¬¡ UpdateVideo
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ“ æµ‹è¯• 3: UpdateVideoï¼ˆç¬¬äºŒæ¬¡æ›´æ–°ï¼‰")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	updateReq2 := &videov1.UpdateVideoRequest{
		VideoId:        videoID,
		Title:          strPtr("ç«¯åˆ°ç«¯æµ‹è¯•è§†é¢‘ï¼ˆç¬¬äºŒæ¬¡æ›´æ–°ï¼‰"),
		AnalysisStatus: strPtr("ready"),
	}

	updateResp2, err := commandClient.UpdateVideo(ctx, updateReq2)
	if err != nil {
		log.Fatalf("âŒ UpdateVideo å¤±è´¥: %v", err)
	}

	log.Println("âœ… UpdateVideo æˆåŠŸ!")
	log.Printf("   Video ID: %s", updateResp2.VideoId)
	log.Printf("   Analysis Status: %s", updateResp2.AnalysisStatus)
	log.Printf("   Version: %d", updateResp2.Version)
	log.Println()

	// 8. ç­‰å¾…æŠ•å½±åŒæ­¥
	log.Println("â³ ç­‰å¾…æŠ•å½±åŒæ­¥ï¼ˆ10 ç§’ï¼‰...")
	time.Sleep(10 * time.Second)
	log.Println()

	// 9. éªŒè¯ç¬¬äºŒæ¬¡æ›´æ–°
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ” éªŒè¯ç¬¬äºŒæ¬¡æ›´æ–°")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	getResp2, err := queryClient.GetVideoDetail(ctx, getReq)
	if err != nil {
		log.Fatalf("âŒ GetVideoDetail å¤±è´¥: %v", err)
	}

	detail2 := getResp2.Detail
	log.Println("âœ… æŠ•å½±è¡¨æŸ¥è¯¢æˆåŠŸ!")
	log.Printf("   Title: %s", detail2.Title)
	log.Printf("   Analysis Status: %s", detail2.AnalysisStatus)
	log.Println()

	// 10. æµ‹è¯• DeleteVideo
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ“ æµ‹è¯• 4: DeleteVideo")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	deleteReq := &videov1.DeleteVideoRequest{
		VideoId: videoID,
		Reason:  strPtr("ç«¯åˆ°ç«¯æµ‹è¯•æ¸…ç†"),
	}

	deleteResp, err := commandClient.DeleteVideo(ctx, deleteReq)
	if err != nil {
		log.Fatalf("âŒ DeleteVideo å¤±è´¥: %v", err)
	}

	log.Println("âœ… DeleteVideo æˆåŠŸ!")
	log.Printf("   Video ID: %s", deleteResp.VideoId)
	log.Printf("   Event ID: %s", deleteResp.EventId)
	log.Printf("   Version: %d", deleteResp.Version)
	log.Println()

	// 11. ç­‰å¾…æŠ•å½±åŒæ­¥
	log.Println("â³ ç­‰å¾…æŠ•å½±åŒæ­¥ï¼ˆ10 ç§’ï¼‰...")
	time.Sleep(10 * time.Second)
	log.Println()

	// 12. éªŒè¯æŠ•å½±è¡¨å·²åˆ é™¤
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ” éªŒè¯æŠ•å½±è¡¨åˆ é™¤")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	_, err = queryClient.GetVideoDetail(ctx, getReq)
	if err != nil {
		log.Println("âœ… æŠ•å½±è¡¨å·²åˆ é™¤ï¼ˆç¬¦åˆé¢„æœŸï¼‰")
		log.Printf("   é”™è¯¯ä¿¡æ¯: %v", err)
	} else {
		log.Println("âŒ æŠ•å½±è¡¨æœªåˆ é™¤ï¼ˆä¸ç¬¦åˆé¢„æœŸï¼‰")
	}
	log.Println()

	// 13. å®Œæˆ
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println("ğŸ‰ ç«¯åˆ°ç«¯æµ‹è¯•å®Œæˆ!")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	log.Println()
	log.Println("âœ… å·²éªŒè¯æµç¨‹:")
	log.Println("   1. CreateVideo â†’ å†™å…¥ videos + outbox âœ“")
	log.Println("   2. UpdateVideo (ready) â†’ outbox â†’ pub/sub â†’ projection âœ“")
	log.Println("   3. GetVideoDetail â†’ æŸ¥è¯¢æŠ•å½±è¡¨ï¼ˆready çŠ¶æ€ï¼‰âœ“")
	log.Println("   4. UpdateVideo (ç¬¬äºŒæ¬¡) â†’ æŠ•å½±æ›´æ–° âœ“")
	log.Println("   5. DeleteVideo â†’ æŠ•å½±åˆ é™¤ âœ“")
}

func strPtr(s string) *string {
	return &s
}
